new strings from tr8n, added TR locale

--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -47,7 +47,7 @@ id:
   see users badges:                             "Lihat seluruh lencana dari %{username}"
   followers:                                    "Pengikut"
   following:                                    "Mengikuti"
-  highlight:                                    "Stabilo"
+  highlight:                                    "Warnai"
   bookmark:                                     "Penanda"
   earned badge date:                            "Diperoleh oleh %{username} %{ago} lalu"
   badges title:                                 "Lencana"
@@ -153,7 +153,7 @@ id:
     write new:                                  "Tulis catatan baru"
     not found:                                  "YouVersion memungkinkan Anda untuk menghubungkan video, audio, gambar, teks dan tautan ke website lain dengan beberapa ayat sekaligus dalam Alkitab. Merupakan suatu cara untuk berpartisipasi dalam komunitas YouVersion dengan berbagi apa yang Anda pelajari dan pikirkan saat Anda membaca Alkitab. Mulailah sekarang dengan memilih ayat dalam bacaan alkitab dan tambahkan catatan Anda. Semudah itu."
     cancel:                                     "Batalkan"
-    pop out:                                    "Pop Out"
+    pop out:                                    "Pop out"
     notes i like:                               "Catatan yang Saya Suka"
     none found:                                 "Tidak ada catatan yang ditemukan..."
     see my likes:                               "Lihat Semua Likes saya"
