--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -427,7 +427,7 @@ ro:
     about this plan:                            "Despre acest plan"
     about the publisher:                        "Despre editor"
     day:                                        "Zi"
-    month:                                      "Lună"
+    month:                                      "Calendar"
     publisher:                                  "Editor"
     success widget title:                       "Succesul planului de citire"
     success blurb:                              "Planurile de citire sunt cel mai bun mod de a petrece timp cu Biblia chiar dacă mai rămâi în urmă uneori. Este important să luăm aminte la ce ne vorbește Dumnezeu zilnic așa că vrem să te ajutăm să fii la zi."
@@ -560,7 +560,7 @@ ro:
     information revolution copy:                "În ultimii zece ani, Internetul a creat o revoluție care deschide posibilități nemaiîntâlnite. Cu abilitatea de a împărtăși, contribui, crea, transmite și comunica, este ușor să exprimăm cine suntem și ce credem cu restul lumii."
     youversion copy:                            "Încă de la începutul său în 1996, scopul LifeChurch.tv a fost să conducă oamenii spre a deveni urmași devotați ai lui Hristos. În acest scop am căutat noi modalități pentru a ajuta oamenii să lege Biblia de viața lor de zi cu zi. Metodele noastre s-au schimbat de-a lungul anilor pe măsură ce am incorporat diverse tehnologii și strategii. Dar profund, scopul nostru rămâne concentrat asupra relevanței, străduințele noastre sunt să demonstrăm și să învățăm oamenii cum se relaționează Cuvântul lui Dumnezeu la fiecare, indiferent unde se află în viață."
     youversion copy 2:                          "YouVersion reprezintă o nouă frontieră în eforturile LifeChurch.tv. Noi nu construim doar un instrument cu impact asupra lumii folosind tehnologii inovatoare, dar mai important, angajăm oamenii în relații cu Dumnezeu pe măsură ce ei descoperă relevanța pe care o are Biblia la viețile lor."
-    partners title:                             "Mulțumiri speciale partenerilor noștri"
+    partners title:                             "Parteneri în publicarea Bibliei"
     partners text:                              "Fără partenerii noștri generoși care publică Biblia, YouVersion pur și simplu nu ar fi în măsură să ofere comunității noastre din întreaga lume așa multe Biblii. Mulți ne-au întrebat cum pot mulțumi acestor susținători vitali ai misiunii YouVersion. Poți afla mai multe despre ei prin intermediul legăturilor de mai jos."
     translation title:                          "Echipele noastre de traducere"
     learn more:                                 "Află mai mult"
