new l10n strings for adding TR and updates to SQ

--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -459,7 +459,7 @@ tr:
     restart description:                        "İsterseniz, planınıza yeniden başlayabilirsiniz. İlerlemeniz ve okuma tarihiniz sıfırlanacak ve baştan başlayacaksınız."
     restart:                                    "Yeniden Başla"
     privacy description:                        "İsterseniz, başkalarına bu Okuma Planın kullandığınızı gösterebilirsiniz. Bunu yapmak ister misiniz?"
-    make private:                               "Gizle"
+    make private:                               "Kişiselleştir"
     make public:                                "Göster"
     privacy title:                              "Gizlilik"
     stop reading:                               "Planı Okumaktan Vazgeç"
@@ -476,7 +476,7 @@ tr:
     morning:                                    "Sabah"
     afternoon:                                  "Öğleden Sonra"
     evening:                                    "Akşam"
-    delivery time:                              "Gönderim Saati:"
+    delivery time:                              "Gönderilen Saat:"
     delivery version:                           "Gönderilen Çeviri"
     add members placeholder:                    "YouVersion Üye Adı"
     add member:                                 "Ekle"
@@ -485,23 +485,23 @@ tr:
     already subscribed:                         "Bu okuma planına zaten abonesiniz!"
     partner added successful:                   "%{username} başarıyla okuma planınızın sorumluluk destekçisi olarak eklendi."
     partner removed successful:                 "%{username} okuma planınızdan sorumluluk destekçisi olarak silindi."
-    make public successful:                     "Okuma Planınız artık topluma açık!"
-    make private successful:                    "Evet, eminim"
-    reminder on successful:                     "Günlük okuma hatırlatması e-Posta iletileri gönderileceké"
-    reminder off successful:                    "Günlük hatırlatmalar artık gönderilmeyecek."
-    email delivery on successful:               "Günlük okuma bilgileri e-Posta aracılığıyla gönderilecek."
+    make public successful:                     "Okuma planınız artık halka açık!"
+    make private successful:                    "Okuma planınız artık özel."
+    reminder on successful:                     "Günlük okuma hatırlatması e-Posta iletileri gönderilecektir."
+    reminder off successful:                    "Günlük okuma hatırlatmaları artık gönderilmeyecek."
+    email delivery on successful:               "Günlük okuma bilgileri e-Posta aracılığıyla gönderilecektir."
     email delivery off successful:              "Günlük okuma bilgileri artık gönderilmeyecek."
     email delivery updated successful:          "e-Posta ayarları güncellenmiştir."
     report on successful:                       "Haftalık sorumluluk desteği raporları gönderilecektir."
     report off successful:                      "Haftalık sorumluluk desteği raporları artık gönderilmeyecek."
-    catch up successful:                        "Günlük okumanızı yakaladınız!"
-    restart successful:                         "kuma Planınıza başından yeniden başladınız."
-    subscribe successful:                       "Muhteşem! Bu Okuma Planına abonesiniz"
+    catch up successful:                        "Günlük okumanızı eriştiniz!"
+    restart successful:                         "Okuma Planınız yeniden baştan başladı."
+    subscribe successful:                       "Muhteşem! Bu Okuma Planına abonesiniz."
     which day in plan:                          "%{total} günden %{day}. gün"
     must start to complete:                     "Okuma ilerlemenizi kaydedebilmek için bu okuma planına başlayın."
   registration:
     with facebook:                              "Facebook Kimliğini Kullanarak Kaydol"
-    benefits title:                             "Kullanıcı Deneyimin Tamamına Erişin"
+    benefits title:                             "Deneyimlerin Tamamına Erişin"
     benefits blurb:                             "YouVersion hesabını oluşturursanız, sitemizdeki birçok özelliğe erişebilirsiniz. Bunların arasında yer imi saklamak veya not yazmak vardır. Giriş yaptığınız mobil cihazınızda görüntülenirler. Hesabınız olursa, Kutsal Kitap'ı arkadaşlarınız ile paylaşmanız çok kolaylaşır. Hadi, gelin. Hesabınızı oluşturun!"
     plan blurb:                                 "Bir Okuma Planı kullamak istiyor musunuz? Çok akıllıca! Okuma Planları, Kutsal Kitap’ı günlük hayatınızın bir parçası haline getirmeye çok yardımcı olur. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun!"
     bookmark blurb:                             "Yer İmleri kullanmak istiyor musunuz? Süper! Yer İmleri size hatırlamak istediğiniz ayetlere ulaşmanıza yardımcı olur. Belki ayeti ezberlemek isterseniz. Yoksa onu başkalarla paylaşmak istersiniz. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun!"
