--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -443,7 +443,7 @@ en:
     reading completed _ mark and show next:     "Next: %{next_reference}"
     which reading:                              "%{current} of %{total}"
     done reading:                               "Done"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Your plan has no scheduled scripture readings for this day, so it has been marked as completed."
     read today:                                 "View Today's Reading"
     completion status _ below percentage:       "Complete"
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
