the Buds and the Betties

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -563,6 +563,8 @@ en:
     partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Our Translation Teams"
     learn more:                                 "Learn More"
+    bible dot com title:                        "What happened to the old Bible.com?"
+    bible dot com copy:                         "If you are looking for content from Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title:                                      "Press Area"
     contact header:                             "Press Contact Information"
