--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -643,7 +643,7 @@ en:
         on:                                     "On"
         off:                                    "Off"
   app errors:
-    404 explanation:                             "Unfortunately, we didn't find a page for <em>%{requested_path}</em>. If you think this page should exist, please let our <a href='%{support_url}}'>support team</a> know, or head back to the <a href='%{reader_path}'>reader</a>."
+    404 explanation:                             "Unfortunately, we didn't find a page for <em>%{requested_path}</em>. If you think this page should exist, please let our <a href='%{support_url}'>support team</a> know, or head back to the <a href='%{reader_path}'>reader</a>."
     404 message 1:                               "That page is so lost, only Jesus could find it."
     404 message 2:                               "Book of Errors 4:04 - 'And it was said unto them, that page was not found.'"
     404 message 3:                               "Seek and ye shall find -- except for this page. It's missing."
