about page copy updagte

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -564,7 +564,7 @@ en:
     translation title:                          "Our Translation Teams"
     learn more:                                 "Learn More"
     bible dot com title:                        "What happened to the old Bible.com?"
-    bible dot com copy:                         "If you are looking for content from Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>"
+    bible dot com copy:                         "If you are looking for the Christ Unlimited Ministries content by Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title:                                      "Press Area"
     contact header:                             "Press Contact Information"
