--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -497,6 +497,7 @@ en:
     subscribe successful:                       "Great! You're subscribed to this plan."
     which day in plan:                          "Day %{day} of %{total}"
     must start to complete:                     "Start this plan to save completed readings!"
+    invalid reference:                          "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
   registration:
     with facebook:                              "Sign up with Facebook"
     benefits title:                             "Get the Full Experience"
