pulled new strings from TX

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -58,7 +58,7 @@ ca:
   my notifications: "Configura els avisos"
   my connections: "Comptes connectats"
   my devices: "Dispositius connectats"
-  language name: "Anglès"
+  language name: "Català"
   sign up: "Registra't"
   have an account: "Ja tens un compte?"
   no account: "No tens un compte?"
