--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
   created ago:                                  "Created %{time_ago} ago"
   copy:                                         "Copy"
   copy confirmed:                               "Copied!"
-  new note:                                     "New Note"
+  new note:                                     "Create a Note"
   twitter:                                      "Twitter"
   facebook:                                     "Facebook"
   share success:                                "Your message has been shared."
@@ -129,6 +129,7 @@ en:
     like button text:                           "Like"
     unlike button text:                         "Unlike"
   notes:
+    list title:                                 "Notes"
     loading community:                          "Loading community notes..."
     no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "Public"
